--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "ejercicio5",
+  "name": "reactapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -41,8 +39,10 @@
     ]
   },
   "devDependencies": {
+    "bootstrap": "^4.5.3",
     "node-sass": "^4.14.1",
     "node-sass-chokidar": "^1.5.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "react-router-dom": "^5.2.0"
   }
 }
