--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start-js": "react-scripts start",
@@ -19,7 +18,6 @@
     "build": "mkdir -p build/css && npm run build-css",
     "build-css": "node-sass-chokidar src/scss -o build/css",
     "watch-css": "npm run build-css && sleep 4 && node-sass-chokidar src/scss -o build/css --watch --recursive",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
